--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,21 @@
 <head>
 	<title>HomeworkTasker</title>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="/static/jquery.cookie.js"></script>
-	<script src="/static/loginPost.js"></script>
+	<script src="/static/js/jquery.cookie.js"></script>
+	<script src="/static/js/loginPost.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/css/index.css">
 </head>
 <body>
 	<h2>Welcome to Homework Tasker! Login!</h2>
+	<h4>Don't have an Account? <a href='/register'>Register</a></h6>
+	<span id="invalid">Invalid username or password. Please try again.</span>
 	<form name='loginForm' id='loginForm'>
 		{% csrf_token %}
 		<input id='usernameInput' placeholder="Username"/>
 		<br />
 		<input id='passwordInput' type="password" placeholder="Password"/>
+		<br />
+		<input id='rememberBox' type="checkbox" name="rememberBox">Remember Me</input>
 		<br />
 		<input type='submit' value='Login'>
 	</form>
