--- a/templates/register.html
+++ b/templates/register.html
@@ -2,20 +2,47 @@
 <head>
 	<title>HomeworkTasker</title>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="/static/jquery.cookie.js"></script>
-	<script src="/static/registerPost.js"></script>
+	<script src="/static/js/jquery.cookie.js"></script>
+	<script src="/static/js/registerPost.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/register.css">
 </head>
 <body>
-	<h2>Welcome to Homework Tasker! Login!</h2>
+		<h2>Welcome to Homework Tasker! Register!</h2>
 	<form name='regsiterForm' id='registerForm'>
 		{% csrf_token %}
-		<input id='usernameInput' placeholder="Username"/>
+		<!-- <center> -->
+		<div class="form-group">
+			<span class='input-group'>
+				<span class="input-group-addon">
+					<span class='glyphicon glyphicon-user'></span>
+				</span>
+				<input class='form-control forming' id='usernameInput' placeholder="Username"/> 
+				<span class='error' id='userExists'>This user already exists</span> <span class='error' id="blankUsername">Invalid Username</span>	
+			</div>
+			
+		</div>
 		<br />
-		<input id='emailInput' placeholder="Email"/>
+		<div class="form-group">
+			<span class="input-group">
+				<span class='input-group-addon'>@</span>
+					<input id='emailInput' class='form-control forming' placeholder="Email"/>
+				<span class='error' id='invalidEmail'>Invalid Email</span>
+		 	</span>
+		 </div>
+		
 		<br />
-		<input id='passwordInput' type="password" placeholder="Password"/>
+		<div class="form-group">
+			<span class="input-group">
+				<span class="input-group-addon">
+					<span class='glyphicon glyphicon-asterisk'></span>
+				</span>
+				<input id='passwordInput' class="form-control forming" type="password" placeholder="Password"/> <span class='error' id='passwordTooShort'>Your password must be at least 6 characters</span>
+		</span>
+	</div>
 		<br />
-		<input type='submit' value='Register'>
+		<div id="register"><button type='submit' class='btn btn-primary text-center'>Register</button></div>
+	<!-- </center> -->
 	</form>
 	
 </body>
