--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/static/js/jquery.cookie.js"></script>
 	<script src="/static/js/loginPost.js"></script>
+	<link rel="stylesheet" type="text/css" href="/static/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/index.css">
 </head>
 <body>
@@ -12,13 +13,30 @@
 	<span id="invalid">Invalid username or password. Please try again.</span>
 	<form name='loginForm' id='loginForm'>
 		{% csrf_token %}
-		<input id='usernameInput' placeholder="Username"/>
+		<div class="form-group">
+			<span class="input-group">
+				<span class='input-group-addon'>
+					<span class='glyphicon glyphicon-user'></span>
+				</span>
+				<input class='form-control' id='usernameInput' placeholder="Username"/>
+			</span>
+		</div>
 		<br />
-		<input id='passwordInput' type="password" placeholder="Password"/>
+		<div class='form-group'>
+			<span class='input-group'>
+				<span class='input-group-addon'>
+					<span class='glyphicon glyphicon-asterisk'></span>
+				</span>
+				<input class='form-control' id='passwordInput' type="password" placeholder="Password"/>
+					
+			</span>
+		</div>
 		<br />
-		<input id='rememberBox' type="checkbox" name="rememberBox">Remember Me</input>
+		<input id='rememberBox' type="checkbox" name="rememberBox">   Remember Me</input>	
 		<br />
-		<input type='submit' value='Login'>
+		
+		<br />
+		<button class='btn btn-primary text-center' type='submit'>Login</button>
 	</form>
 </body>
 </html>
